--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,14 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.1.11'
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'jacoco'
+apply plugin: "info.solidsoft.pitest"
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
@@ -40,3 +42,4 @@ jacocoTestReport {
 }
 
 check.dependsOn jacocoTestReport
+check.dependsOn 'pitest'
